--- a/package.json
+++ b/package.json
@@ -17,6 +17,5 @@
   "bugs": {
     "url": "https://github.com/korbav/Reverb.js/issues"
   },
-  "homepage": "https://github.com/korbav/Reverb.js#readme",
-  "publishConfig": { "registry": "https://npm.pkg.github.com/" }
+  "homepage": "https://github.com/korbav/Reverb.js#readme"
 }
